-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
14688
The mdd_acl_set() sets size unexpectedly on the master object and cause the master object's directory content is truncated.
This corruption can be easily reproduced by the sanity test_125, unfortunately, there is no way to read the master object directory content directly until we work on the patch for LU-5223.