LU-5262 lod: not set size on directory

We should not allow to set size on the directory object, otherwise,
it will cause the directroy data corruption.

This patch also fixes the following issues:

1) lod_attr_get() should not skip existing shards.

2) Allow transfer "nlink" attribute via OUT RPC, otherwise,
   lod_attr_get() will always get zero nlink from remote shards.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I44092796961ef26d47ee9c210f52fa451084bd44